<resources>
    <string name="app_name">My CV</string>
    <string name="text_website">Website</string>
    <string name="text_linkedin">Linkedin</string>
    <string name="text_github">Github</string>
    <string name="title_skills">Skills</string>
    <string name="title_experience">Experience</string>
    <string name="text_date_template_format">%1$s-%2$s</string>
    <string name="error_no_internet_connection_found">No internet connection found. Please verify that your internet
        connection is available
    </string>
    <string name="error_http_connection">An http connection error occurred. Please verify your connection</string>
    <string name="error_timeout_connection">An timeout error occurred. Please verify your connection</string>
</resources>
